--- a/app/src/main/res/layout/activity_layout_lista_produtos.xml
+++ b/app/src/main/res/layout/activity_layout_lista_produtos.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:layout_width="50dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="00000"
         android:id="@+id/tvListaCodigo"/>
