--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
 
     <ListView
         android:id="@+id/minhasListas"
-        android:layout_width="449dp"
+        android:layout_width="match_parent"
         android:layout_height="318dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
